# alipay_gtosolver

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
android/src/main/java/: ClipboardPlugin.kt
ios/: Package.swift
permissions/autogenerated/: reference.md
src/: error.rs  lib.rs  mobile.rs
