[package]
name = "tauri-plugin-clipboard-manager"
version = "2.0.0-rc.0"
description = "Read and write to the system clipboard."
links = "tauri-plugin-clipboard-manager"
edition = "2021"


[build-dependencies]
tauri-plugin = { version ="2.0.0-rc.2", features = [ "build" ] }

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.2" }
tauri-build = "2.0.0-rc.2"
serde_json = "1"
thiserror = "1.0.63"

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.0.0-rc.2", features = ["wry"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
arboard = "3"
image = "0.24"
