[package]
name = "to-alipay-plugin"
version = "2.0.0-rc.1"
description = "Read and write to the system clipboard."
edition = "2021"


[build-dependencies]
tauri-plugin = { version ="2.0.0-rc.2", features = [ "build" ] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0-rc" }
tauri-build = "2.0.0-rc.2"
serde_json = "1"
thiserror = "1.0.63"
